Closed
Bug 817419
Opened 13 years ago
Closed 13 years ago
Fix warning about DebugScopes forward-declaration as struct
Categories
(Core :: JavaScript Engine, defect, P4)
Tracking
()
RESOLVED
FIXED
mozilla20
| Tracking | Status | |
|---|---|---|
| firefox19 | --- | unaffected |
| firefox20 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
717 bytes,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
This small patch fixes a MSVC warning regression from bug 790338:
js\src\vm/ScopeObject.h(539) : warning C4099: 'js::DebugScopes' : type name first seen using 'struct' now seen using 'class'
js\src\jscompartment.h(118) : see declaration of 'js::DebugScopes'
js\src\vm/ScopeObject.h(539) : warning C4099: 'js::DebugScopes' : type name first seen using 'struct' now seen using 'class'
js\src\jscompartment.h(118) : see declaration of 'js::DebugScopes'
src\vm/ScopeObject.h(539) : warning C4099: 'js::DebugScopes' : type name first seen using 'struct' now seen using 'class'
js\src\jscompartment.h(118) : see declaration of 'js::DebugScopes'
Attachment #687539 -
Flags: review?(jcoppeard)
Comment 1•13 years ago
|
||
Comment on attachment 687539 [details] [diff] [review]
fix-DebugScopes-warning.patch
Review of attachment 687539 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, cheers.
Attachment #687539 -
Flags: review?(jcoppeard) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Severity: normal → minor
status-firefox19:
--- → unaffected
status-firefox20:
--- → fixed
Target Milestone: --- → mozilla20
Updated•13 years ago
|
Whiteboard: [js:t]
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [js:t]
You need to log in
before you can comment on or make changes to this bug.
Description
•