Bug 817419 - Fix warning about DebugScopes forward-declaration as struct. r=jcoppeard